# 2025_Greiner_PseudoNPs

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
data/: Amaryllidaceae.csv  ChEMBL_NPs.csv  DrugBank.csv  Enamine_ASC_sample.csv  Hasubanan.csv  MIAs.csv  Sceletium.csv
notebooks/: 1.01-fb-access_chembl.ipynb  1.02-fb-data_preparation.ipynb  1.03-fb-feature_calc.ipynb  1.04-fb-pca_umap.ipynb  1.05-fb-scores.ipynb  1.06-fb-PMIs.ipynb  1.09-fb-tmp_feature_calculation.ipynb  1.10-fb-MIAs_filtering.ipynb  1.11-fb-Amaryllidaceae_filtering.ipynb  1.12-fb-Hasubanan_filtering.ipynb  1.13-fb-enrichment.ipynb  2.01-fb-first_plots.ipynb
reports/: PCA_exp_var.csv  PCA_exp_var_alkaloids.csv  PCA_scores_alkaloids.csv  PMIs_Hasubanan.csv  PMIs_Sceletium.csv  PMIs_compounds.csv  PMIs_drugbank.csv  PMIs_enamine.csv  PMIs_pseudoNPs.csv
scripts/: 01_retrieve_nps_chembl.py  02_prepare_datasets.py  03_feature_calculation.py  04_pca.py  05_get_scores.py  06_get_pmis.py
src/: data_preparation.py  features.py  pmis.py  scores.py  utils.py
