[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "2025_greiner_pseudo_np"
version = "0.0.1"
description = "Cheminformatics characterization of Pseudo-Natural Pro"
authors = [
  { name = "Dr. Freddy Bernal" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["2025_greiner_pseudo_np"]
force_sort_within_sections = true


